# research-rag

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
data/examples/: computer_vision.csv
docs/: ARCHITECTURE.md
requirements/: core.txt
src/research_rag/: __init__.py  __main__.py
src/research_rag/adapters/: __init__.py  csv.py  embeddings.py  pdf.py  vectorstore.py
src/research_rag/adapters/llm_providers/: __init__.py  base.py  ollama.py  openai.py
src/research_rag/cli/: __init__.py  __main__.py  app.py
src/research_rag/core/: __init__.py  errors.py
src/research_rag/core/config/: __init__.py  settings.py
src/research_rag/core/logging/: __init__.py  setup.py
src/research_rag/core/services/: __init__.py  chat.py  indexing.py  ingestion.py  relevance.py  search.py
src/research_rag/models/: __init__.py  chat.py  papers.py  search.py
src/research_rag/utils/: __init__.py  io.py  pydantic_compat.py
src/research_rag/web/: __init__.py
src/research_rag/web/api/: __init__.py  app.py
src/research_rag/web/ui/: __init__.py  app.py
src/research_rag/web/ui/templates/: base.html
tests/: __init__.py  test_relevance_service.py
tests/unit/: __init__.py
